fix(general): extend card comp & adjust spacing

--- a/src/components/pages/home/Home.module.scss
+++ b/src/components/pages/home/Home.module.scss
@@ -6,7 +6,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	gap: var(--gap-large);
+	gap: var(--gap-small);
 	margin: 0 auto;
 
 	> .about {
@@ -44,6 +44,7 @@
 @media screen and (min-width: 500px) {
 	.container {
 		flex-direction: row;
+		gap: var(--gap-large);
 	}
 
 	.divide {
