--- a/src/components/shared/layout/Layout.module.scss
+++ b/src/components/shared/layout/Layout.module.scss
@@ -1,6 +1,6 @@
 .container {
 	max-width: 50rem;
-	margin: 4rem auto;
+	margin: 2rem auto;
 	padding-inline: var(--gap);
 }
 
