--- a/src/components/shared/topBar/TopBar.module.scss
+++ b/src/components/shared/topBar/TopBar.module.scss
@@ -45,7 +45,7 @@
 }
 
 .skeleton {
-	width: 2.35rem;	// Prevent content shift
+	width: 2rem;
 	height: 2rem;
 	background: transparent;
 }
