--- a/src/components/shared/topBar/setTheme/SetTheme.module.scss
+++ b/src/components/shared/topBar/setTheme/SetTheme.module.scss
@@ -2,7 +2,7 @@
 @import "src/stylesheets/keyframes";
 
 .button {
-	padding: 0.15rem 0.25rem;
+	padding: 0.25rem;
 	background: var(--color-background-secondary);
 	cursor: pointer;
 
