--- a/src/components/ui/spinner/Spinner.module.scss
+++ b/src/components/ui/spinner/Spinner.module.scss
@@ -43,6 +43,7 @@
 }
 
 .message {
+	text-align: center;
 	font-size: 1.4rem;
 	font-weight: 600;
 	color: var(--color-contrast);
