--- a/src/stylesheets/global.scss
+++ b/src/stylesheets/global.scss
@@ -21,6 +21,7 @@
 	--color-background-secondary: #e9e7e7;
 	--color-text-primary: #3b3b3b;
 	--color-text-secondary: #565656;
+	--color-tint: rgb(94 94 94 / 20%);
 	--color-text-cta: #3b3b3b;
 	--color-border: #7c7c7c;
 	--color-contrast: #2a2a2a;
@@ -42,6 +43,7 @@
 	--color-contrast: #fcf1e0;
 	--color-text-primary: #c4c4c4;
 	--color-text-secondary: #a4a4a4;
+	--color-tint: rgb(59 59 59 / 40%);
 	--color-text-cta: #dfe70d;
 }
 
